css/style.css
body {margin: 0px;}
section a,
footer a {
	color: inherit;
	text-decoration: none;
}

section a:hover {
	text-decoration: underline;
}

/*FONTS*/

body {font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;}

/*HORIZONAL LIST ITEMS*/

.sorter ul,
.sorter li,
header ul,
header li { display: inline-block; }

/*SORTER*/

.sorter {
	text-align: center;
}

.sorter p {
	display: inline-block;
	width: 15%;
}

.sorter ul {
	padding-left: 0px;
	width: 80%;
}

.sorter ul li {
	width: 20%;
	font-weight: bold;
}

/*HOME PAGE CHARACTER BLOCK*/

.create_new_block,
.pc_block {
	margin: auto;
	margin-bottom: 25px;
}

.pc_img {max-height: 320px;}

.create_new_block,
.pc_block,
.pc_img img {
	width: 320px;
}

.pc_img img {margin-bottom: 0px;}

.pc_block_info {background-color: #EEE;}

.pc_block_info h1 {
	padding: 10px 25px 0px;
	margin: 0px;
}

.create_new_block .pc_block_info h1 {
	padding-bottom: 10px;
}

.pc_block_info ul {
	list-style: none;
	margin: 0px;
	padding-top: 10px;
	padding-left: 25px;
	padding-bottom: 5px;
}

.pc_block_info ul li {
	padding-bottom: 5px;
	position: relative;
}

.pc_block_info ul h2 {
	display: inline-block;
	width: 125px;
	margin: 0px;
	font-size: 1.25em;
}

.pc_block_info span {
	display: inline-block;
	width: 150px;
	margin-left: 10px;
	padding-right: 25px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	position: absolute;
	bottom: 5px;
}

/*LOGO*/
.logo {display: none;}

/*MAIN NAVIGATION*/

header {
	width: 100%;
	background-color: #CCC;
	margin: 0px;
}

ul.main_nav {
	padding: 0px;
	margin-top: 10px;
	margin-bottom: 2px;
	width: 100%;
}

ul.main_nav li {
	min-width: 32%;
}

ul.main_nav li a {
	display: inline-block;
	min-width: 100%;
	text-align: center;
}

ul.main_nav li a img {
	margin: auto;
	padding-bottom: 5px;
	border-bottom: 3px solid #CCC;
}

/*HOVER BORDER SHOULD BE REPLACED BY A CLASS USING THE ACTIVE SECTION*/
ul.main_nav li a img:hover {
	border-bottom: 3px solid #f2f2f2;
}

/*HIDE MENU NAMES ON MOBILE/TABLET*/
ul.main_nav li span {display: none;}


/*FOOTER*/
footer {
	background-color: #CCC;
	color: #f2f2f2;
	padding: 10px 0px;
	text-align: center;
}

footer span:first-child::after {
	content: " | ";
}

